mobile-edge: materialize accessing api client
